--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
     <nav class="px-md">
       <img src="assets/icons/logo-symbol.svg" class="mobile-only" alt="">
       <img src="assets/icons/logo-horizontal.svg" class="desktop-only" alt="">
-      <a href="#" class="btn btn-primary btn-md" aria-label="Assinar"></a>
+      <a href="pricing" class="btn btn-primary btn-md" aria-label="Assinar"></a>
     </nav>
     <div class="title px-md">
       <h1>Desperte a sua imaginação e explore novos mundos</h1>
       <p>Junte-se ao clube de assinatura Encantos Literários e descubra maravilhas e aventuras a cada página</p>
     </div>
   </header>
-  
+  <div class="hero-content px-md">
+    <img src="assets/images/mystery-opened-spellbook.png" alt="">
+    <img src="assets/images/mystery-ouija-planchette.png" alt="">
+    <img src="assets/images/mystery-crystal-ball.png" alt="">
+    <p>
+      <strong>Receba todo mês um <b>livro surpresa</b></strong>
+      <strong>do seu tema favorito, acompanhado de <b>brindes exclusivos</b></strong>
+      <strong>que tornarão a sua experiência literária ainda mais <b>encantadora.</b></strong>
+    </p>
+  </div>
 </body>
 </html>
