ajustando book section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <header>
-    <section class="hero"></section>
+    <div class="blur"></div>
+    <div class="background"></div>
     <nav class="px-md">
       <img src="assets/icons/logo-symbol.svg" class="mobile-only" alt="">
       <img src="assets/icons/logo-horizontal.svg" class="desktop-only" alt="">
@@ -23,6 +24,7 @@
     </div>
   </header>
   <div class="hero-content px-md">
+    <div class="blur"></div>
     <img src="assets/images/mystery-opened-spellbook.png" alt="">
     <img src="assets/images/mystery-ouija-planchette.png" alt="">
     <img src="assets/images/mystery-crystal-ball.png" alt="">
@@ -32,5 +34,30 @@
       <strong>que tornarão a sua experiência literária ainda mais <b>encantadora.</b></strong>
     </p>
   </div>
+  <section class="content">
+    <header class="subtitle">
+      <div>
+        <img src="assets/icons/star-purple-vector.svg" alt="">
+        <h2 class="nobr">Conheça o kit mensal</h2>
+        <img src="assets/icons/star-purple-vector.svg" alt="">
+      </div>
+      <span>Recebe uma caixa surpresa todos os meses</span>
+    </header>
+    <div>
+      <div class="book-animation">
+        <img src="assets/images/book.png" alt="">
+        <img src="assets/images/bookmark-purple.png" alt="">
+        <img src="assets/images/bookmark-yellow.png" alt="">
+        <span class="nobr">Livro em capa dura</span>
+        <img src="assets/images/arrow-1.svg" alt="">
+        <span class="nobr">Broche exclusivo</span>
+        <img src="assets/images/arrow-2.svg" alt="">
+        <img src="assets/images/pin.png" alt="">
+        <img src="assets/images/arrow-3.svg" alt="">
+        <span class="nobr">Marca páginas temático</span>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
+
