--- a/index.html
+++ b/index.html
@@ -55,8 +55,70 @@
         <img src="assets/images/pin.png" alt="">
         <img src="assets/images/arrow-3.svg" alt="">
         <span class="nobr">Marca páginas temático</span>
+        <div class="blur"></div>
       </div>
     </div>
+  </section>
+  <section id="pricing">
+    <div class="px-md">
+      <header class="subtitle">
+        <h2>Assinatura <br>
+          Encantos Literários</h2>
+      </header>
+      <div class="cards">
+        <div class="card mensal px-card py-card">
+          <header>
+            <h3>Mensal</h3>
+            <book-pricing>R$ 59,90<small>/mês</small></book-pricing>
+            <p>R$ 718,80 por ano</p>
+          </header>
+          <div class="details">
+            <ul role="list">
+              <li>Kit mensal com livro temático</li>
+              <li>Broche e marca páginas exclusivo</li>
+              <li>Acesso à comunidade literária</li>
+            </ul>
+            <a href="#" class="btn btn-secondary btn-lg" aria-label="Assinar mensal"></a>
+          </div>
+        </div>
+        <div class="semestral px-card py-card">
+          <header>
+            <div>
+              <h3>Semestral</h3>
+              <div class="tag">Popular</div>
+            </div>
+            <book-pricing>R$ 52,90<small>/mês</small></book-pricing>
+            <p>R$ 634,80 por ano</p>
+          </header>
+          <div class="details">
+            <ul role="list">
+              <li>Kit mensal com livro temático</li>
+              <li>Broche e marca páginas exclusivo</li>
+              <li>Acesso à comunidade literária</li>
+              <li>Membro premium do clube</li>
+            </ul>
+            <a href="#" class="btn btn-primary btn-lg" aria-label="Assinar semestral"></a>
+          </div>
+        </div>
+        <div class="card Anual px-card py-card">
+          <header>
+            <h3>Anual</h3>
+            <book-pricing>R$48,90<small>/mês</small></book-pricing>
+            <p>R$ 586,80 por ano</p>
+          </header>
+          <div class="details">
+            <ul role="list">
+              <li>Kit mensal com livro temático</li>
+              <li>Broche e marca páginas exclusivo</li>
+              <li>Acesso à comunidade literária</li>
+              <li>Membro premium do clube</li>
+              <li>Planner anual de leituras</li>
+            </ul>
+            <a href="#" class="btn btn-secondary btn-lg" aria-label="Assinar anual"></a>
+          </div>
+        </div>
+      </div>
+    </div> 
   </section>
 </body>
 </html>
