adicionando animações e hover na seção pricing

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
           Encantos Literários</h2>
       </header>
       <div class="cards">
+        <div class="stars-top">
+          <img src="assets/icons/star-purple-1.png" class="desktop-only" alt="">
+          <img src="assets/icons/star-purple-2.png" class="desktop-only" alt="">
+        </div>
         <div class="card mensal px-card py-card">
           <header>
             <h3>Mensal</h3>
@@ -81,7 +85,8 @@
             <a href="#" class="btn btn-secondary btn-lg" aria-label="Assinar mensal"></a>
           </div>
         </div>
-        <div class="semestral px-card py-card">
+        <img src="assets/icons/Bunny.svg" alt="">
+        <div class="card semestral px-card py-card">
           <header>
             <div>
               <h3>Semestral</h3>
@@ -100,7 +105,7 @@
             <a href="#" class="btn btn-primary btn-lg" aria-label="Assinar semestral"></a>
           </div>
         </div>
-        <div class="card Anual px-card py-card">
+        <div class="card anual px-card py-card">
           <header>
             <h3>Anual</h3>
             <book-pricing>R$48,90<small>/mês</small></book-pricing>
@@ -117,8 +122,13 @@
             <a href="#" class="btn btn-secondary btn-lg" aria-label="Assinar anual"></a>
           </div>
         </div>
+        <div class="stars-bottom">
+          <img src="assets/icons/star-purple-1.png" class="desktop-only" alt="">
+          <img src="assets/icons/star-purple-2.png" class="desktop-only" alt="">
+        </div>
       </div>
-    </div> 
+    </div>
+    <div class="blur-blue"></div>
   </section>
 </body>
 </html>
